--- a/client/src/app/login-page/login-page.component.html
+++ b/client/src/app/login-page/login-page.component.html
@@ -1,4 +1,4 @@
-<div class="form">
+<div class="emo_pt">
     <form [formGroup]="form" (ngSubmit)="onSubmit()">
 
               <p class="entrance tc notadmin" appEasyLang>Логин: </p>
@@ -29,16 +29,21 @@
                </label>            
 
     </form>
+    <a 
+    href="https://play.google.com/store/apps/details?id=com.centervnl.emo" 
+    >
+         <img src='/images/google-play-badge.png' class="market">
+    </a>
+    <a 
+    href="https://apps.apple.com/us/app/%D1%8D%D0%BC%D0%BE/id1585983367" 
+    >
+         <img src='/images/app_store.png' class="market">
+    </a>
     
 </div>
 <div class="emo_pt">
      <img id="emoPicture" src="/images/emo.png">
      <h1 class="tc" id="emoText" appEasyLang>ЭМО</h1>
-     <a 
-     href="https://play.google.com/store/apps/details?id=com.centervnl.emo" 
-     >
-          <img src='/images/google-play-badge.png' class="market">
-     </a>
 </div>
 <div class="footer">
      <a 
