--- a/client/src/app/photolikes-page/photolikes-page.component.html
+++ b/client/src/app/photolikes-page/photolikes-page.component.html
@@ -1,6 +1,8 @@
 <div *ngIf="!reloading; else reloader">
     <div *ngFor="let event of events">
         <div class="phlevent dark-{{session.firstColor}}-border">
+            <span appEasyLang  class="pNotAdmin">{{'Пригласил' +  (event.autorSex === 2 ? 'А' : '') + ' ' + event.autorName + (session.surnameView ? (' ' + event.autorSurname) : '')}}</span><br>
+            <hr noshade color="black">
             <div *ngIf="!event.chatTitle">
                 <div *ngIf="buttons$ | async as buttons">
                     <span *ngFor="let button of buttons">
