--- a/client/src/app/events-page/events-page.component.html
+++ b/client/src/app/events-page/events-page.component.html
@@ -8,7 +8,7 @@
         <div class="letter green-cursor"
         *ngIf="emo"
         (click)="goToEmoBot()"> </div>  
-        <div class="friendName tc dark-{{session.firstColor}}-border green-cursor" (click)="goToChat(user._id, session.defaultColor)">
+        <div class="friendName tc dark-{{session.firstColor}}-border green-cursor" (click)="goToEmoBot()">
             <span appEasyLang>ЭМО</span><br>
         </div>                                             	 
    </div>
