--- a/client/src/theme/style.css
+++ b/client/src/theme/style.css
@@ -111,3 +111,9 @@ audio, video {
     outline: none !important;
 }
 
+.gameBox {
+    position: relative;
+    width: 100%;
+    height: 100%;
+}
+
