--- a/client/src/app/games/games.component.html
+++ b/client/src/app/games/games.component.html
@@ -29,6 +29,16 @@
             <span appEasyLang>Тир</span><br>
         </div>                                             	 
     </div>
+
+    <div class="box-friend">
+        <img 
+        class="friendAvatar dark-{{session.firstColor}}-border green-cursor" 
+        src="/images/examples.png"
+        (click)="goToGame(3)">
+        <div class="friendName tc dark-{{session.firstColor}}-border green-cursor" (click)="goToGame(3)">
+            <span appEasyLang>Примеры</span><br>
+        </div>                                             	 
+    </div>
                                          	 
 </div>
 
