--- a/client/src/app/games/game2/game2.component.html
+++ b/client/src/app/games/game2/game2.component.html
@@ -4,22 +4,22 @@
         <div class="pNotAdmin" appEasyLang>Вам надо кликать по шарикам. Сколько времени вы хотите играть?</div>
         <ul class="time-list" id="time-list">
             <li>
-            <button class="time-btn" (click)="start(15)">
+            <button class="time-btn green-cursor" (click)="start(15)">
                 15 секунд
             </button>
             </li>
             <li>
-            <button class="time-btn" (click)="start(30)">
+            <button class="time-btn green-cursor" (click)="start(30)">
                 30 секунд
             </button>
             </li>
             <li>
-            <button class="time-btn" (click)="start(60)">
+            <button class="time-btn green-cursor" (click)="start(60)">
                 1 минута
             </button>
             </li>
             <li>
-            <button class="time-btn" (click)="start(120)">
+            <button class="time-btn green-cursor" (click)="start(120)">
                 2 минуты
             </button>
             </li>
@@ -37,12 +37,12 @@
         <div class="pNotAdmin" appEasyLang>Хотите сыграть ещё?</div>
         <ul class="time-list" id="time-list">
             <li>
-            <button class="time-btn" (click)="newStart()">
+            <button class="time-btn green-cursor" (click)="newStart()">
                 Да
             </button>
             </li>
             <li>
-            <button class="time-btn" (click)="exit()">
+            <button class="time-btn green-cursor" (click)="exit()">
                 Нет
             </button>
             </li>
