--- a/client/src/app/shared/layouts/login-layout/login-layout.component.html
+++ b/client/src/app/shared/layouts/login-layout/login-layout.component.html
@@ -6,7 +6,7 @@
         >
             <a 
             [routerLink]="[link.url]" 
-            class="nav-admin middle-1-bg-hover"
+            class="nav-admin middle-1-bg-hover green-cursor"
             routerLinkActive="manage-active">
                 {{link.name}}
             </a>
