--- a/client/src/app/public-photolikes-page/public-photolikes-page.component.html
+++ b/client/src/app/public-photolikes-page/public-photolikes-page.component.html
@@ -24,6 +24,7 @@
             *ngFor="let photo of event.photolikes"
             class="phl_img green-cursor" 
             [src]="photo"
+            loading="lazy"
             (click)="openZoom(photo)">
 
             <br>
