--- a/client/src/theme/library.css
+++ b/client/src/theme/library.css
@@ -143,17 +143,21 @@
   }
   
   .downloads {
-       margin-left: 20%;
-       margin-bottom: 8%;
-       margin-top: 32%;
-       width: 60%;
+       margin: auto;
+       padding-bottom: 2vw;
+       padding-top: 6vw;
+       width: 11vw;
+       height: 11vw;
        position: relative;
+       object-fit: cover;
+       display: block;
   }
 
   .downloads-picture {
-    max-width: 100%;
+    width: 100%;
     max-height: 100%;
     margin: auto;
+    display: block;
   }
   
   .libraryName {
