--- a/client/src/app/login-page/login-page.component.html
+++ b/client/src/app/login-page/login-page.component.html
@@ -51,4 +51,10 @@
      class="link">
           Политика конфиденциальности
      </a>
+
+     <a 
+     href="mailto:admin@emo.su"  
+     class="link">
+          Связаться с нами: admin@emo.su
+     </a>
 </div>
