--- a/client/src/theme/friends.css
+++ b/client/src/theme/friends.css
@@ -156,9 +156,9 @@
 
 .birthday {
   position: relative;
-  margin-left: 2rem;
-  bottom: 1rem;
-  margin-bottom: -4rem;
+  margin-left: 2vw;
+  bottom: 1vw;
+  margin-bottom: -4vw;
   height: 4vw;
   width: 4vw;
   background-size: 100% 100%;
